# Draw-A-Card-For-Life

./: .gitignore  README.md  package.json
src/: App.tsx  CollectionView.tsx  DrawnCard.tsx  PixelCard.tsx  cardLogic.ts  index.html  main.tsx  server.ts  storage.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  storage.rs
src/data/: cards.ts
