[package]
name = "draw-a-card-for-life"
version = "0.1.0"
description = "A gentle life-energy card drawing app"
authors = ["Zane"]
edition = "2021"

[lib]
name = "draw_a_card_for_life_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
